[tool.poetry]
name = "qc-utils"
version = "1.0"
description = "Small useful helper functions for quantum computer systems research"
authors = ["Jason Chadwick <jchadwick100@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.3"
matplotlib = ">=3.8.2"
qiskit = ">=1.0"
qutip = ">=4.7.3"
scipy = ">=1.11.4"
sympy = ">=1.12"
ipykernel = ">=6.28.0"
qiskit-ibm-runtime = "^0.23.0"
stim = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
